Add Telegram webhook integration via python-telegram-bot

--- a/config/example.env
+++ b/config/example.env
@@ -1,6 +1,9 @@
 CONTROL_ENV=dev
 REDIS_URL=redis://localhost:6379/0
 
+# Telegram
+TELEGRAM_BOT_TOKEN=
+
 # Playwright
 PLAYWRIGHT_HEADLESS=true
 PLAYWRIGHT_SLOW_MO_MS=0
