Add Telegram product catalog (DM + channel publishing)

--- a/config/example.env
+++ b/config/example.env
@@ -3,6 +3,8 @@ REDIS_URL=redis://localhost:6379/0
 
 # Telegram
 TELEGRAM_BOT_TOKEN=
+# Example: -1001234567890
+TELEGRAM_CATALOG_CHANNEL_ID=
 
 # Playwright
 PLAYWRIGHT_HEADLESS=true
