Add 3 vendor connectors + Celery sync to populate Telegram catalog

--- a/config/example.env
+++ b/config/example.env
@@ -10,6 +10,9 @@ TELEGRAM_CATALOG_CHANNEL_ID=
 PLAYWRIGHT_HEADLESS=true
 PLAYWRIGHT_SLOW_MO_MS=0
 
+# Vendor sync
+VENDOR_SYNC_CONCURRENCY=1
+
 # LLM (optional)
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
