--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,9 @@
-# Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
-env/
-ENV/
-
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Credentials & Secrets
-config/credentials.json
-*.env
-.env.local
-secrets/
-
-# Database
-*.db
-*.sqlite
+*.pyc
+.venv/
+.env
+.env.*
+playwright/.auth/
 *.sqlite3
-
-# Logs
-logs/
-*.log
-
-# Cache
-.cache/
-*.cache
-redis-data/
-
-# OS
+*.db
 .DS_Store
-Thumbs.db
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Temp files
-temp/
-tmp/
-*.tmp
