--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,8 @@
-# Core Dependencies
-Python>=3.9
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-
-# Database
-sqlalchemy==2.0.23
-alembic==1.13.1
-psycopg2-binary==2.9.9
-pymongo==4.6.0
-redis==5.0.1
-
-# Task Queue & Scheduling
-celery==5.3.4
-aioredis==2.0.1
-aiofiles==23.2.1
-
-# Web Automation
-selenium==4.15.2
-playwright==1.40.0
-beautifulsoup4==4.12.2
-requests==2.31.0
-aiohttp==3.9.1
-
-# AI & LLM
-langchain==0.1.1
-openai==1.3.9
-anthropic==0.7.1
-python-dotenv==1.0.0
-
-# Telegram
-python-telegram-bot==22.5
-
-# Utilities
-python-jose==3.3.0
-passlib==1.7.4
-cryptography==41.0.7
-python-multipart==0.0.6
-pyyaml==6.0.1
-python-json-logger==2.0.7
-loguru==0.7.2
-
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-httpx==0.25.2
-
-# Development
-black==23.12.0
-flake8==6.1.0
-mypy==1.7.1
-ipython==8.18.1
+python-dotenv>=1.0.1
+pydantic>=2.8.2
+rich>=13.7.1
+typer>=0.12.3
+fastapi>=0.112.0
+uvicorn[standard]>=0.30.6
+sqlalchemy>=2.0.32
+playwright>=1.47.0
