docs: Update .env.example with Mihanstore setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
 CONTROL_ENV=dev
-# --- Credentials (DO NOT COMMIT real values) ---
+
+# --- Mihanstore Credentials ---
+# Login: https://mihanstore.net/partner/index.php?act=logins
+# Note: CAPTCHA must be solved manually during login (use headless=False)
+MIHANSTORE_USERNAME=09123456789
+MIHANSTORE_PASSWORD=your_password_here
+
+# --- Other Vendor Credentials ---
 MANAMOD_USERNAME=
 MANAMOD_PASSWORD=
-MIHANSTORE_USERNAME=
-MIHANSTORE_PASSWORD=
+
 MEMARKET_USERNAME=
 MEMARKET_PASSWORD=
 
-# --- Runtime ---
+# --- Database ---
 DATABASE_URL=sqlite:///./control.sqlite3
+
+# --- App Settings ---
+DEBUG=true
+LOG_LEVEL=INFO
