chore: Update gitignore for database files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ playwright/.auth/
 *.sqlite3
 *.db
 .DS_Store
+
+# Database files
+data/
+!data/.gitkeep
+
+# Session files
+.sessions/
+!.sessions/.gitignore
