--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,48 +1,61 @@
-# FastAPI Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+# FastAPI and dependencies
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.3
+pydantic-settings==2.1.0
 
 # Database
+SQLAlchemy==2.0.25
 psycopg2-binary==2.9.9
-SQLAlchemy==2.0.23
-alembic==1.12.1
+alembic==1.13.1
 
 # Redis
 redis==5.0.1
-hiredis==2.2.3
-
-# Celery
-celery==5.3.4
+hiredis==2.3.2
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
+python-multipart==0.0.6
 
 # HTTP Requests
-httpx==0.25.1
-aiohttp==3.9.0
+httpx==0.26.0
+aiohttp==3.9.1
 requests==2.31.0
 
 # Web Scraping
-beautifulsoup4==4.12.2
-lxml==4.9.3
-selenium==4.15.2
+beautifulsoup4==4.12.3
+lxml==5.1.0
+selenium==4.16.0
 
-# Data Processing
-pandas==2.1.3
-numpy==1.26.2
-
-# Validation
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# Celery (Background Tasks)
+celery==5.3.6
+flower==2.0.1
 
 # Utils
-python-slugify==8.0.1
-Pillow==10.1.0
-pytz==2023.3
-jdatetime==4.1.1
+python-dotenv==1.0.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+
+# Email
+email-validator==2.1.0
+
+# SMS (Iranian providers)
+kavenegar==1.1.2
+
+# Payment Gateways
+zeep==4.2.1
 
 # Monitoring
-sentry-sdk==1.38.0
+sentry-sdk==1.40.0
+
+# Testing
+pytest==7.4.4
+pytest-asyncio==0.23.3
+
+# Data validation
+jsonschema==4.20.0
+
+# Persian tools
+persian==0.3.0
+jdatetime==4.1.1
