--- a/config/.env.example
+++ b/config/.env.example
@@ -1,258 +1,48 @@
-# =================================
-# تنظیمات فروشگاه DOT SHOP
-# =================================
+# ========== DOT SHOP Configuration ==========
 
-# ----- مشخصات فروشگاه -----
+# ========== Shop Information ==========
 SHOP_NAME=فروشگاه نقطه
-SHOP_DOMAIN=dotshop.ir
-SHOP_OWNER=نام صاحب فروشگاه
-SHOP_EMAIL=info@dotshop.ir
-SHOP_PHONE=09123456789
+SHOP_DOMAIN=localhost
+SHOP_OWNER=
 
-# ----- دیتابیس PostgreSQL -----
+# ========== Database Configuration ==========
 DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=dotshop
 DB_USER=dotshop_user
 DB_PASSWORD=change_this_secure_password_123
 
-# ----- Redis Cache -----
+# ========== Redis Configuration ==========
 REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
 
-# ----- Backend Settings -----
-BACKEND_PORT=8000
-BACKEND_WORKERS=4
-DEBUG=True
-ENVIRONMENT=development
-
-# ----- Frontend Settings -----
-FRONTEND_PORT=3000
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
-
-# ----- Security -----
-SECRET_KEY=generate_random_64_character_string_here_very_important
-JWT_SECRET=another_random_string_for_jwt_tokens_min_32_chars
+# ========== Security ==========
+SECRET_KEY=change-this-to-a-random-secret-key-minimum-32-characters
+JWT_SECRET=change-this-to-another-random-jwt-secret-key-32-chars
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_HOURS=24
 
-# ----- Telegram Bot -----
-TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz123456789
-TELEGRAM_ADMIN_ID=123456789
-TELEGRAM_WEBHOOK_URL=https://dotshop.ir/webhook/telegram
+# ========== CORS Origins ==========
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
-# ----- WhatsApp Business API (اختیاری) -----
-WHATSAPP_API_KEY=
-WHATSAPP_PHONE_NUMBER=
-
-# ----- Instagram API (اختیاری) -----
-INSTAGRAM_ACCESS_TOKEN=
-INSTAGRAM_BUSINESS_ACCOUNT_ID=
-
-# =====================================
-# API Keys پلتفرم‌های همکاری در فروش
-# =====================================
-
-# ----- دیجی‌کالا -----
-# دریافت از: https://www.digikala.com/seller/
+# ========== Platform API Keys (Optional for testing) ==========
 DIGIKALA_AFFILIATE_ID=
-DIGIKALA_API_KEY=
-DIGIKALA_COMMISSION_RATE=0.12
-
-# ----- میهن استور -----
-# دریافت از: https://mihanstore.net/partner/
 MIHANSTORE_PARTNER_ID=
-MIHANSTORE_API_KEY=
-MIHANSTORE_COMMISSION_RATE=0.40
-
-# ----- بامیلو -----
-# دریافت از: https://www.bamilo.com/affiliate/
 BAMILO_AFFILIATE_KEY=
-BAMILO_API_KEY=
-BAMILO_COMMISSION_RATE=0.25
-
-# ----- ترب (Torob) -----
-# دریافت از: https://torob.com/api/
 TOROB_API_KEY=
-TOROB_MERCHANT_ID=
 
-# ----- دیوار (Divar) -----
-# دریافت از: https://divar.ir/
-DIVAR_API_KEY=
-DIVAR_CITY=tehran
+# ========== Telegram Bot (Optional) ==========
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_ADMIN_ID=
 
-# ----- شیپور (Sheypoor) -----
-SHEYPOOR_API_KEY=
-SHEYPOOR_USER_ID=
-
-# ----- تکنولایف -----
-TECHNOLIFE_AFFILIATE_ID=
-TECHNOLIFE_API_KEY=
-
-# ----- دیجی استایل -----
-DIGISTYLE_AFFILIATE_ID=
-DIGISTYLE_API_KEY=
-
-# ----- زنبیل -----
-ZANBIL_AFFILIATE_ID=
-ZANBIL_API_KEY=
-
-# ----- اسنپ‌فود (اختیاری) -----
-SNAPPFOOD_API_KEY=
-SNAPPFOOD_VENDOR_ID=
-
-# ----- تپسی‌فود (اختیاری) -----
-TAPSIFOOD_API_KEY=
-TAPSIFOOD_RESTAURANT_ID=
-
-# =====================================
-# تنظیمات پیامک (SMS)
-# =====================================
-
-# انتخاب سرویس: kavenegar, ghasedak, smsir
-SMS_PROVIDER=kavenegar
-
-# کاوه نگار
+# ========== SMS Provider (Kavenegar) ==========
 KAVENEGAR_API_KEY=
-KAVENEGAR_SENDER=10008663
 
-# قاصدک
-GHASEDAK_API_KEY=
-GHASEDAK_SENDER=
-
-# SMS.ir
-SMSIR_API_KEY=
-SMSIR_LINE_NUMBER=
-
-# =====================================
-# تنظیمات ایمیل (Email)
-# =====================================
-
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USE_TLS=True
-SMTP_USER=your_email@gmail.com
-SMTP_PASSWORD=your_app_specific_password
-EMAIL_FROM=noreply@dotshop.ir
-
-# =====================================
-# تنظیمات پرداخت (Payment Gateway)
-# =====================================
-
-# زرین‌پال
-ZARINPAL_MERCHANT_ID=
-ZARINPAL_SANDBOX=True
-
-# آیدی‌پی
-IDPAY_API_KEY=
-IDPAY_SANDBOX=True
-
-# پی‌دات‌آی‌آر
-PAYDOTIR_API_KEY=
-
-# =====================================
-# تنظیمات ارسال (Shipping)
-# =====================================
-
-# پست پیشتاز
-POST_API_KEY=
-POST_SENDER_CODE=
-
-# تیپاکس
-TIPAX_API_KEY=
-TIPAX_ACCOUNT_ID=
-
-# اسنپ‌باکس
-SNAPPBOX_API_KEY=
-
-# میوه
-MIWE_API_KEY=
-
-# =====================================
-# تنظیمات Scraping و Crawling
-# =====================================
-
-# تعداد Thread همزمان
-SCRAPER_MAX_WORKERS=5
-
-# فاصله زمانی بین درخواست‌ها (ثانیه)
-SCRAPER_DELAY=2
-
-# تعداد تلاش مجدد در صورت خطا
-SCRAPER_RETRY_COUNT=3
-
-# Timeout برای هر درخواست
-SCRAPER_TIMEOUT=30
-
-# User-Agent
-USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36
-
-# =====================================
-# تنظیمات Cache و Performance
-# =====================================
-
-# مدت زمان کش محصولات (ثانیه)
-PRODUCT_CACHE_TTL=1800
-
-# مدت زمان کش قیمت‌ها (ثانیه)  
-PRICE_CACHE_TTL=900
-
-# مدت زمان کش API (ثانیه)
-API_CACHE_TTL=300
-
-# =====================================
-# تنظیمات Celery (Task Queue)
-# =====================================
-
+# ========== Celery Configuration ==========
 CELERY_BROKER_URL=redis://redis:6379/1
 CELERY_RESULT_BACKEND=redis://redis:6379/2
-CELERY_TASK_SERIALIZER=json
-CELERY_RESULT_SERIALIZER=json
-CELERY_TIMEZONE=Asia/Tehran
 
-# =====================================
-# تنظیمات Monitoring و Logging
-# =====================================
-
-LOG_LEVEL=INFO
-LOG_FILE=/var/log/dotshop/app.log
-LOG_MAX_SIZE=10485760
-LOG_BACKUP_COUNT=5
-
-# Sentry (اختیاری)
-SENTRY_DSN=
-
-# =====================================
-# تنظیمات Backup
-# =====================================
-
-BACKUP_ENABLED=True
-BACKUP_SCHEDULE=0 2 * * *
-BACKUP_RETENTION_DAYS=30
-BACKUP_PATH=/backups
-
-# =====================================
-# تنظیمات Advanced
-# =====================================
-
-# حداکثر تعداد محصول در یک صفحه
-MAX_PRODUCTS_PER_PAGE=50
-
-# حداکثر اندازه فایل آپلود (مگابایت)
-MAX_UPLOAD_SIZE_MB=10
-
-# فعال‌سازی CORS
-CORS_ENABLED=True
-CORS_ORIGINS=http://localhost:3000,https://dotshop.ir
-
-# Rate Limiting
-RATE_LIMIT_ENABLED=True
-RATE_LIMIT_PER_MINUTE=60
-
-# =====================================
-# توجه: این فایل را هرگز در Git commit نکنید!
-# فایل .env.example را کپی کنید به .env
-# و اطلاعات واقعی خود را وارد کنید
-# =====================================
+# ========== Server Ports ==========
+BACKEND_PORT=8000
+FRONTEND_PORT=3000
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
